[workspace]
members = [
    "basename",
    "chroot",
    "clear",
    "coreutils_core",
    "cut",
    "date",
    "du",
    "dirname",
    "echo",
    "env",
    "expand",
    "false",
    "groups",
    "head",
    "id",
    "link",
    "logname",
    "mkdir",
    "mktemp",
    "mkfifo",
    "mv",
    "nice",
    "nl",
    "nohup",
    "pwd",
    "rm",
    "rmdir",
    "sleep",
    "true",
    "tty",
    "uname",
    "unexpand",
    "unlink",
    "uptime",
    "users",
    "wc",
    "who",
    "whoami",
    "yes",
]
