[profile.release]
lto = "thin"
codegen-units = 1
# target_cpu = "native"
# panic = "abort"

[workspace]
members = [
    "basename",
    "cat",
    "chroot",
    "clear",
    # "coreutils_core",
    "csplit",
    "cut",
    "date",
    "dirname",
    "du",
    "echo",
    "env",
    "expand",
    "false",
    "groups",
    "head",
    "id",
    "link",
    "logname",
    "ls",
    "mkdir",
    "mkfifo",
    "mktemp",
    "mv",
    "nice",
    "nl",
    "nohup",
    "pwd",
    "rm",
    "rmdir",
    "seq",
    "sleep",
    "sort",
    "tail",
    "tee",
    "time",
    "touch",
    "true",
    "tty",
    "uname",
    "unexpand",
    "uniq",
    "unlink",
    "uptime",
    "users",
    "wc",
    "who",
    "whoami",
    "yes",
]
