[package]
name = "my-tool"
version = "0.1.0"
authors = ["Author <email@email.com>"]
build = "build.rs"
edition = "2018"
description = """
Tool description (required)
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^2.33.0", features = ["wrap_help"] }

[build-dependencies]
clap = "^2.33.0"
