[package]
name = "cat"
version = "0.1.0"
authors = ["Anubhab Ghosh <anubhabghosh.me@gmail.com>"]
build = "build.rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^2.33.0", features = ["yaml", "wrap_help"] }

[build-dependencies]
clap = { version = "^2.33.0", features = ["yaml"] }
