[package]
name = "chroot"
version = "0.1.0"
authors = ["ladysamantha <ladysamantha@protonmail.com>", "Eric Shimizu Karbstein <gr41.j4ck@gmail.com>"]
license = "MPL-2.0-no-copyleft-exception"
build = "build.rs"
edition = "2018"
description = "Run command or interactive shell with special root directory."

[dependencies]
clap = { version = "^2.33.0", features = ["wrap_help"] }
coreutils_core = { path = "../coreutils_core" }

[build-dependencies]
clap = "^2.33.0"
