[package]
name = "chroot"
version = "0.1.0"
authors = [
    "ladysamantha <ladysamantha@protonmail.com>",
    "Eric Shimizu Karbstein <gr41.j4ck@gmail.com>",
]
license = "MPL-2.0-no-copyleft-exception"
build = "build.rs"
edition = "2021"
rust-version = "1.58.0"
description = "Run command or interactive shell with special root directory."

[dependencies]
clap = { version = "3.0.0", features = ["cargo", "wrap_help"] }
coreutils_core = { path = "../coreutils_core" }

[build-dependencies]
clap = { version = "3.0.0", features = ["cargo"] }
clap_generate = "3.0.0"
