[package]
name = "clear"
version = "0.1.0"
authors = ["Ashwin-A-K <ashwinkumar3098@gmail.com>"]
license = "MPL-2.0-no-copyleft-exception"
build = "build.rs"
edition = "2021"
rust-version = "1.56.1"
description = "Clear the terminal screen."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0", features = ["cargo", "wrap_help"] }

[build-dependencies]
clap = { version = "3.0.0", features = ["cargo"] }
clap_generate = "3.0.0"
