[package]
name = "comm" # Edit this
version = "0.1.0"
authors = ["shisuimadara adyityasingh@gmail.com"] # Edit this
license = "MPL-2.0-no-copyleft-exception"
build = "build.rs"
edition = "2021"
rust-version = "1.61.0"
description = "Comm implementation in Rust"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0", features = ["cargo", "wrap_help"] }

[build-dependencies]
clap = { version = "3.0.0", features = ["cargo"] }
clap_generate = "3.0.0"
