[package]
name = "coreutils_core"
version = "0.1.0"
authors = ["GrayJack <gr41.j4ck@gmail.com>", "Gab David <g.bianchetdavid@gmail.com>"]
edition = "2018"

[dependencies]
# libc = { version = "^0.2.66", features = ["extra_traits"] }
libc = { git = "https://github.com/rust-lang/libc", features = ["extra_traits"] }
bstr = "~0.2.11"
regex = "^1.3.4"
time = "~0.2.6"
