[package]
name = "csplit"
version = "0.1.0"
authors = ["Mats Kindahl <mats.kindahl@gmail.com>"]
license = "MPL-2.0-no-copyleft-exception"
build = "build.rs"
edition = "2021"
rust-version = "1.58.0"
description = """
Split FILE by each PATTERN into a series of files 'xx00', 'xx01',...

A file name has to be provided, but if it is '-', input will read
from standard input.

The input will be split up to, but not including, the line that
matches PATTERN.

The number of bytes in each file will be displayed on standard
output with one line for each file.
"""

[dependencies]
clap = { version = "3.0.0", features = ["cargo", "wrap_help"] }
regex = "^1.3.4"

[build-dependencies]
clap = { version = "3.0.0", features = ["cargo"] }
clap_generate = "3.0.0"
