[package]
name = "date"
version = "0.1.0"
authors = ["Jonas Geschke <mail@yonny.de>"]
build = "build.rs"
edition = "2018"

[dependencies]
clap = { version = "^2.33.0", features = ["yaml", "wrap_help"] }
coreutils_core = { path = "../coreutils_core" }
chrono = { version = "~0.4.9", features = ["serde"] }

[build-dependencies]
clap = { version = "^2.33.0", features = ["yaml"] }
