[package]
name = "dirname"
version = "0.1.0"
authors = ["GrayJack <gr41.j4ck@gmail.com>"]
build = "build.rs"
edition = "2018"
description = """
Display each NAME with its last non-slash component and trailing slashes removed.
If NAME contains no '/', output '.' (meaning the current directory).
"""

[dependencies]
clap = { version = "^2.33.0", features = ["wrap_help"] }

[build-dependencies]
clap = "^2.33.0"
