[package]
name = "du"
version = "0.1.0"
authors = ["Julian Kaindl <kaindl745@gmail.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
chrono = "^0.4.9"
clap = { version = "^2.33.0", features = ["yaml", "wrap_help"] }
walkdir = "^2.2.9"
glob = "^0.3.0"

[build-dependencies]
chrono = "^0.4.9"
clap = { version = "^2.33.0", features = ["yaml"] }
walkdir = "^2.2.9"
glob = "^0.3.0"