[package]
name = "du"
version = "0.1.0"
authors = ["Julian Kaindl <kaindl745@gmail.com>"]
build = "build.rs"
edition = "2018"
description = """
Summarize disk usage for the set FILEs, recursively for directories.
"""

[dependencies]
chrono = "^0.4.9"
clap = { version = "^2.33.0", features = ["wrap_help"] }
walkdir = "^2.3.1"
glob = "^0.3.0"

[build-dependencies]
clap = "^2.33.0"
