[package]
name = "du"
version = "0.1.0"
authors = ["Julian Kaindl <kaindl745@gmail.com>"]
license = "MPL-2.0-no-copyleft-exception"
build = "build.rs"
edition = "2021"
rust-version = "1.61.0"
description = """
Summarize disk usage for the set FILEs, recursively for directories.
"""

[dependencies]
chrono = "^0.4.9"
clap = { version = "3.0.0", features = ["cargo", "wrap_help"] }
walkdir = "^2.3.1"
glob = "^0.3.0"

[build-dependencies]
clap = { version = "3.0.0", features = ["cargo"] }
clap_generate = "3.0.0"
