[package]
name = "echo"
version = "0.1.0"
authors = ["Eric Shimizu Karbstein <gr41.j4ck@gmail.com>"]
license = "MPL-2.0-no-copyleft-exception"
build = "build.rs"
edition = "2021"
rust-version = "1.61.0"
description = """
Echo the STRING(s) to standard output.
If -e is in effect, the following sequences are recognized:

\\\\      backslash
\\a      alert (BEL)
\\b      backspace
\\c      produce no further output
\\e      escape
\\f      form feed
\\n      new line
\\r      carriage return
\\t      horizontal tab
\\v      vertical tab
\\0NNN   byte with octal value NNN (1 to 3 digits)
\\xHH    byte with hexadecimal value HH (1 to 2 digits)
"""

[dependencies]
clap = { version = "3.0.0", features = ["cargo", "wrap_help"] }

[build-dependencies]
clap = { version = "3.0.0", features = ["cargo"] }
clap_generate = "3.0.0"
