[package]
name = "env"
version = "0.0.1"
authors = [
    "Federico Ponzi <federico.ponzi92@gmail.com>",
    "Eric Shimizu Karbstein <gr41.j4ck@gmail.com>",
]
license = "MPL-2.0-no-copyleft-exception"
build = "build.rs"
edition = "2021"
rust-version = "1.56.1"
description = """
Set environment and execute command, or display environment

The env utility executes another [COMMAND] after modifying the environment as specified on the \
command line. Each [NAME=VALUE] option specifies the setting of an environment variable, name, \
with a value of value. All such environment variables are set before the [COMMAND] is executed.
"""

[dependencies]
clap = { version = "3.0.0", features = ["cargo", "wrap_help"] }

[build-dependencies]
clap = { version = "3.0.0", features = ["cargo"] }
clap_generate = "3.0.0"
