[package]
name = "expand"
version = "0.1.0"
authors = ["muskuloes <19honor@gmail.com>", "Bojan Durdevic <bojan88@gmail.com>"]
build = "build.rs"
edition = "2018"
description = """
Convert tabs in each FILE to spaces, writing to standard output.

With no FILE, or when FILE is -, read standard input.
"""


[dependencies]
clap = { version = "^2.33.0", features = ["wrap_help"] }

[build-dependencies]
clap = "^2.33.0"
