[package]
name = "expand"
version = "0.1.0"
authors = [
    "muskuloes <19honor@gmail.com>",
    "Bojan Durdevic <bojan88@gmail.com>",
]
license = "MPL-2.0-no-copyleft-exception"
build = "build.rs"
edition = "2021"
rust-version = "1.58.0"
description = """
Convert tabs in each FILE to spaces, writing to standard output.

With no FILE, or when FILE is -, read standard input.
"""

[dependencies]
clap = { version = "3.0.0", features = ["cargo", "wrap_help"] }

[build-dependencies]
clap = { version = "3.0.0", features = ["cargo"] }
clap_generate = "3.0.0"
