[package]
name = "false"
version = "0.1.0"
authors = ["GrayJack <gr41.j4ck@gmail.com>"]
license = "Unlicense"
edition = "2021"
rust-version = "1.56.1"
description = """
Exit with a status code indicating failure.

Some shells may provide a builtin false command which is identical to this utility.
"""

[dependencies]
