[package]
name = "groups"
version = "0.1.0"
authors = ["Eric Shimizu Karbstein <gr41.j4ck@gmail.com>"]
build = "build.rs"
edition = "2018"
description = """
Display the current group names or ID values. If the value does not have a \
corresponding entry in /etc/group, the value will be displayed as the \
numerical group value. The optional user parameter will display the groups \
for the named user.
"""

[dependencies]
clap = { version = "^2.33.0", features = ["wrap_help"] }
coreutils_core = { path = "../coreutils_core" }

[build-dependencies]
clap = "^2.33.0"
