[package]
name = "groups"
version = "0.1.0"
authors = ["Eric Shimizu Karbstein <gr41.j4ck@gmail.com>"]
license = "MPL-2.0-no-copyleft-exception"
build = "build.rs"
edition = "2021"
rust-version = "1.61.0"
description = """
Display the current group names or ID values. If the value does not have a \
corresponding entry in /etc/group, the value will be displayed as the \
numerical group value. The optional user parameter will display the groups \
for the named user.
"""

[dependencies]
clap = { version = "3.0.0", features = ["cargo", "wrap_help"] }
coreutils_core = { path = "../coreutils_core" }

[build-dependencies]
clap = { version = "3.0.0", features = ["cargo"] }
clap_generate = "3.0.0"
