[package]
name = "head"
version = "0.1.0"
authors = ["Odin Dutton <odindutton@gmail.com>"]
license = "MPL-2.0-no-copyleft-exception"
build = "build.rs"
edition = "2021"
rust-version = "1.58.0"
description = """
This filter displays the first count lines or bytes of each specified FILE, or \
of the standard input if no files are specified. If count is omitted it \
defaults to 10.

If more than a single file is specified, each file is preceded by a header \
consisting of the string ``==> XXX <=='' where ``XXX'' is the name of the file.
"""

[dependencies]
clap = { version = "3.0.0", features = ["cargo", "wrap_help"] }

[build-dependencies]
clap = { version = "3.0.0", features = ["cargo"] }
clap_generate = "3.0.0"
