[package]
name = "link"
version = "0.1.0"
authors = ["Torbjörn Lönnemark <tobbez@ryara.net>"]
license = "MPL-2.0-no-copyleft-exception"
build = "build.rs"
edition = "2021"
rust-version = "1.56.1"
description = "Creates a (hard) link to a file."

[dependencies]
clap = { version = "^2.33.0", features = ["wrap_help"] }

[build-dependencies]
clap = "^2.33.0"
