[package]
name = "link"
version = "0.1.0"
authors = ["Torbjörn Lönnemark <tobbez@ryara.net>"]
license = "MPL-2.0-no-copyleft-exception"
build = "build.rs"
edition = "2021"
rust-version = "1.58.0"
description = "Creates a (hard) link to a file."

[dependencies]
clap = { version = "3.0.0", features = ["cargo", "wrap_help"] }

[build-dependencies]
clap = { version = "3.0.0", features = ["cargo"] }
clap_generate = "3.0.0"
