[package]
name = "mkdir"
version = "0.1.0"
authors = ["Rodrigo Oliveira Campos <rodrigo.redcode@gmail.com>"]
license = "MPL-2.0-no-copyleft-exception"
build = "build.rs"
edition = "2018"
description = "Create directory(ies), if they do not already exist."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^2.33.0", features = ["wrap_help"] }

[build-dependencies]
clap = "^2.33.0"
