[package]
name = "mkfifo"
version = "0.0.1"
authors = ["Federico Ponzi <federico.ponzi92@gmail.com>"]
license = "MPL-2.0-no-copyleft-exception"
build = "build.rs"
edition = "2018"
description = "Make FIFOs. (named pipes)"

[dependencies]
clap = { version = "^2.33.0", features = ["wrap_help"] }
coreutils_core = { path = "../coreutils_core" }

[build-dependencies]
clap = "^2.33.0"
