[package]
name = "mktemp"
version = "0.1.0"
authors = ["Torbjörn Lönnemark <tobbez@ryara.net>"]
build = "build.rs"
edition = "2018"
description = "Create a temporary file or directory."

[dependencies]
clap = { version = "^2.33.0", features = ["wrap_help"] }
coreutils_core = { path = "../coreutils_core" }

[build-dependencies]
clap = "^2.33.0"
