[package]
name = "mktemp"
version = "0.1.0"
authors = ["Torbjörn Lönnemark <tobbez@ryara.net>"]
license = "MPL-2.0-no-copyleft-exception"
build = "build.rs"
edition = "2021"
rust-version = "1.56.1"
description = "Create a temporary file or directory."

[dependencies]
clap = { version = "^2.33.0", features = ["wrap_help"] }
coreutils_core = { path = "../coreutils_core" }

[build-dependencies]
clap = "^2.33.0"
