[package]
name = "mv"
version = "0.1.0"
authors = ["Gab David <g.bianchetdavid@gmail.com>"]
license = "MPL-2.0-no-copyleft-exception"
build = "build.rs"
edition = "2021"
rust-version = "1.61.0"
description = "Move or rename files."

[dependencies]
clap = { version = "3.0.0", features = ["cargo", "env", "wrap_help"] }
coreutils_core = { path = "../coreutils_core" }

[build-dependencies]
clap = { version = "3.0.0", features = ["cargo"] }
clap_generate = "3.0.0"
