[package]
name = "nice"
version = "0.1.0"
authors = ["Eric Shimizu Karbstein <gr41.j4ck@gmail.com>"]
license = "MPL-2.0-no-copyleft-exception"
build = "build.rs"
edition = "2021"
rust-version = "1.58.0"
description = """
Run COMMAND with an adjusted niceness, which affects process scheduling.

Niceness values range from at least -20 (most favorable to the process) to \
20 (least favorable to the process).
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0", features = ["cargo", "wrap_help"] }
coreutils_core = { path = "../coreutils_core" }

[build-dependencies]
clap = { version = "3.0.0", features = ["cargo"] }
clap_generate = "3.0.0"
