[package]
name = "nl"
version = "0.1.0"
authors = ["Bojan Durdevic <bojan88@gmail.com>"]
license = "MPL-2.0-no-copyleft-exception"
build = "build.rs"
edition = "2018"
description = """
Write each FILE to standard output, with line numbers added.

With no FILE, or when FILE is -, read standard input.
"""

[dependencies]
clap = { version = "^2.33.0", features = ["wrap_help"] }
regex = "^1.3.1"

[build-dependencies]
clap = "^2.33.0"
