[package]
name = "nl"
version = "0.1.0"
authors = ["Bojan Durdevic <bojan88@gmail.com>"]
license = "MPL-2.0-no-copyleft-exception"
build = "build.rs"
edition = "2021"
rust-version = "1.61.0"
description = """
Write each FILE to standard output, with line numbers added.

With no FILE, or when FILE is -, read standard input.
"""

[dependencies]
clap = { version = "3.0.0", features = ["cargo", "wrap_help"] }
regex = "^1.3.1"

[build-dependencies]
clap = { version = "3.0.0", features = ["cargo"] }
clap_generate = "3.0.0"
