[package]
name = "nohup"
version = "0.1.0"
authors = ["FedericoPonzi <federico.ponzi92@gmail.com>", "GrayJack <gr41.j4ck@gmail.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
clap = { version = "^2.33.0", features = ["yaml"] }
coreutils_core = { path = "../coreutils_core" }

[build-dependencies]
clap = { version = "^2.33.0", features = ["yaml"] }
