[package]
name = "nohup"
version = "0.1.0"
authors = ["FedericoPonzi <federico.ponzi92@gmail.com>", "GrayJack <gr41.j4ck@gmail.com>"]
build = "build.rs"
edition = "2018"
description = """
Run COMMAND and ignore SIGHUP signals. If standard input is a terminal,
redirect it from an unreadable file.


If standard output is a terminal, append output to 'nohup.out' if possible,
'$PWD/nohup.out' otherwise.


If standard error is a terminal, redirect it to standard output. To save
output to FILE, use 'nohup COMMAND > FILE'.
"""

[dependencies]
clap = { version = "^2.33.0", features = ["wrap_help"] }
coreutils_core = { path = "../coreutils_core" }

[build-dependencies]
clap = "^2.33.0"
