[package]
name = "nohup"
version = "0.1.0"
authors = [
    "FedericoPonzi <federico.ponzi92@gmail.com>",
    "Eric Shimizu Karbstein <gr41.j4ck@gmail.com>",
]
license = "MPL-2.0-no-copyleft-exception"
build = "build.rs"
edition = "2021"
rust-version = "1.61.0"
description = """
Run COMMAND and ignore SIGHUP signals. If standard input is a terminal,
redirect it from an unreadable file.


If standard output is a terminal, append output to 'nohup.out' if possible,
'$PWD/nohup.out' otherwise.


If standard error is a terminal, redirect it to standard output. To save
output to FILE, use 'nohup COMMAND > FILE'.
"""

[dependencies]
clap = { version = "3.0.0", features = ["cargo", "wrap_help"] }
coreutils_core = { path = "../coreutils_core" }

[build-dependencies]
clap = { version = "3.0.0", features = ["cargo"] }
clap_generate = "3.0.0"
